--- a/content/post/2020-10-31-leafs-fans-some-reasons-for-optimism/index.en.Rmd
+++ b/content/post/2020-10-31-leafs-fans-some-reasons-for-optimism/index.en.Rmd
@@ -8,3 +8,6 @@ tags: []
 ---
 
 Test
+
+<iframe width="100%" height="684" frameborder="0"
+  src="https://observablehq.com/embed/@hockeyfan22/multi-line-chart?cell=chart"></iframe>
