--- a/content/post/2020-10-31-leafs-fans-some-reasons-for-optimism/index.en.Rmd
+++ b/content/post/2020-10-31-leafs-fans-some-reasons-for-optimism/index.en.Rmd
@@ -7,7 +7,8 @@ categories: []
 tags: []
 ---
 
-Test
+#Reason 1: It's not 2014
+A lot has been ade
 
 <iframe width="100%" height="684" frameborder="0"
   src="https://observablehq.com/embed/@hockeyfan22/multi-line-chart?cell=chart"></iframe>
